WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140827
Layout Test http/tests/media/track-in-band-hls-metadata.html is flaky
https://bugs.webkit.org/show_bug.cgi?id=140827
Summary
Layout Test http/tests/media/track-in-band-hls-metadata.html is flaky
Jer Noble
Reported
2015-01-23 09:37:09 PST
The following layout test is flaky on Apple Yosemite Debug WK1 http/tests/media/track-in-band-hls-metadata.html Probable cause: NULL pointer dereference in MediaPlayerPrivateAVFoundationObjC::metadataDidArrive().
Attachments
Patch
(1.93 KB, patch)
2015-01-23 09:40 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2015-01-23 09:40:18 PST
Created
attachment 245231
[details]
Patch
WebKit Commit Bot
Comment 2
2015-01-23 10:27:33 PST
Comment on
attachment 245231
[details]
Patch Clearing flags on attachment: 245231 Committed
r179010
: <
http://trac.webkit.org/changeset/179010
>
WebKit Commit Bot
Comment 3
2015-01-23 10:27:35 PST
All reviewed patches have been landed. Closing bug.
Tim Horton
Comment 4
2015-01-23 11:17:12 PST
***
Bug 140831
has been marked as a duplicate of this bug. ***
David Kilzer (:ddkilzer)
Comment 5
2015-05-14 08:58:12 PDT
<
rdar://problem/20919573
>
David Kilzer (:ddkilzer)
Comment 6
2015-05-14 08:58:46 PDT
This was also a source of crashes in the WebContent process at: WebCore::InbandMetadataTextTrackPrivateAVF::updatePendingCueEndTimes()
Eric Carlson
Comment 7
2019-11-05 07:01:48 PST
***
Bug 140022
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug