Layout Test http/tests/media/track-in-band-hls-metadata.html is flaky https://bugs.webkit.org/show_bug.cgi?id=140827

Reviewed by Eric Carlson.

Create the m_metadataTrack by calling prepareMetadataTrack() before deref-ing it.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::metadataDidArrive):


Canonical link: https://commits.webkit.org/158808@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179010 268f45cc-cd09-0410-ab3c-d52691b4dbfc